# sandbox

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md
cmake/: dev-mode.cmake  install-rules.cmake
cmake/lib/: raylib-cpp.cmake  threadpool.cmake  vector.cmake
source/: lib.cpp  main.cpp
source/lib/: CMakeLists.txt
source/lib/source/: air.cpp  air.hpp  cell.cpp  cell.hpp  fire.cpp  fire.hpp  glass.cpp  glass.hpp  plant.cpp  plant.hpp  sand.cpp  sand.hpp  sandbox.cpp  sandbox.hpp  steam.cpp  steam.hpp  water.cpp  water.hpp
test/: CMakeLists.txt
test/source/: sandbox_bench.cpp  sandbox_test.cpp
